src/objects/Contact_Product__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Products</relationshipLabel>
        <relationshipName>Contact_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <label>Plan Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Plan_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Contact Products</relationshipLabel>
        <relationshipName>Contact_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contact Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CP-{000000}</displayFormat>
        <label>Contact Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>